--- a/client/index.html
+++ b/client/index.html
@@ -8,16 +8,6 @@
         <p>Welcome to Node.js Chat Application</p>
 
         <script src="/socket.io/socket.io.js"></script>
-        <script>
-            var socket = io();
-            socket.on('connect', () => {
-                console.log('Connected to Server');
-            });
-
-            socket.on('disconnect', () => {
-                console.log('Disconnected from Server');
-            });
-
-        </script>
+        <script src="/js/index.js"></script>
     </body>
 </html>
