--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,15 @@
     <body>
         <p>Welcome to Node.js Chat Application</p>
 
+        <ol id="messages"></ol>
+
+        <form id="message-form">
+            <input type="text" name="message" placeholder="Enter your Message"/>
+            <button>Send</button>
+        </form>
+
         <script src="/socket.io/socket.io.js"></script>
+        <script src="/js/libs/jquery-3.2.0.min.js"></script>
         <script src="/js/index.js"></script>
     </body>
 </html>
