--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,7 @@
             <input type="text" name="message" placeholder="Enter your Message"/>
             <button>Send</button>
         </form>
+        <button id="send-location">Send Location</button>
 
         <script src="/socket.io/socket.io.js"></script>
         <script src="/js/libs/jquery-3.2.0.min.js"></script>
