added README file and included git urls

--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,7 @@
 
         <script id="message-template" type="text/template">
             
-            <li class="messages">
+            <li class="message">
                 <div class="message__title">
                     <h4>{{from}}</h4>
                     <span>{{createdAt}}</span>
